fixed mobile view horizontal scroll, fixed hero text on mobile landscape orientation, made timetable responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,12 @@ nav {
     }
 }
 
+@media (max-width:768px) and (orientation: landscape) {
+    #hero-text-h1 {
+        padding-top: 30vh;
+    }
+}
+
 /* "Who are we?" Section Styling */
 
 #our-services h1 {
@@ -174,18 +180,21 @@ nav {
 #bg-image-timetable {
     background: url(/assets/images/kettlebell-class.jpg) no-repeat center center;
     background-size: cover;
-    height: 50vh;
+    height: 25vh;
 }
 
 #timetable-overlay {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.8);
     color: #fff;
+    margin: 0;
 }
 
-#timetable-overlay div {
-    display: inline;
+@media (max-width:992px) {
+    #bg-image-timetable {
+        background: url(/assets/images/kettlebell-class.jpg) no-repeat center center;
+        background-size: cover;
+        height: 100vh;
+    }
 }
 
 /* "Gallery" Section Styling */
